// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`build-headers-program with badly headers configuration 1`] = `
"
set resp.http.X-Frame-Options = \\"DENY\\";

set resp.http.X-XSS-Protection = \\"1; mode=block\\";

set resp.http.X-Content-Type-Options = \\"nosniff\\";

set resp.http.Referrer-Policy = \\"same-origin\\";

set resp.http.X-Frame-Options = \\"sameorigin\\";
if (req.url.path == \\"/component---node-modules-gatsby-plugin-offline-app-shell-js-78f9e4dea04737fa062d.js\\") {
 set resp.http.Cache-Control = \\"public, max-age=31536000, immutable\\";
}
if (req.url.path == \\"/0-0180cd94ef2497ac7db8.js\\") {
 set resp.http.Cache-Control = \\"public, max-age=31536000, immutable\\";
}
if (req.url.path == \\"/component---src-templates-blog-post-js-517987eae96e75cddbe7.js\\") {
 set resp.http.Cache-Control = \\"public, max-age=31536000, immutable\\";
}
if (req.url.path == \\"/component---src-pages-404-js-53e6c51a5a7e73090f50.js\\") {
 set resp.http.Cache-Control = \\"public, max-age=31536000, immutable\\";
}
if (req.url.path == \\"/component---src-pages-index-js-0bdd01c77ee09ef0224c.js\\") {
 set resp.http.Cache-Control = \\"public, max-age=31536000, immutable\\";
}
if (req.url.path == \\"/webpack-runtime-acaa8994f1f704475e21.js\\") {
 set resp.http.Cache-Control = \\"public, max-age=31536000, immutable\\";
}
if (req.url.path == \\"/styles.1025963f4f2ec7abbad4.css\\") {
 set resp.http.Cache-Control = \\"public, max-age=31536000, immutable\\";
}
if (req.url.path == \\"/styles-565f081c8374bbda155f.js\\") {
 set resp.http.Cache-Control = \\"public, max-age=31536000, immutable\\";
}
if (req.url.path == \\"/app-f33c13590352da20930f.js\\") {
 set resp.http.Cache-Control = \\"public, max-age=31536000, immutable\\";
}
if (req.url.path == \\"/static/*\\") {
 set resp.http.Cache-Control = \\"public, max-age=31536000, immutable\\";
}
if (req.url.path == \\"/sw.js\\") {
 set resp.http.Cache-Control = \\"no-cache\\";
}
if (req.url.path == \\"/offline-plugin-app-shell-fallback/\\") {
 set resp.http.Link = \\"</webpack-runtime-acaa8994f1f704475e21.js>; rel=preload; as=script\\";
set resp.http.Link = \\"</styles-565f081c8374bbda155f.js>; rel=preload; as=script\\";
set resp.http.Link = \\"</app-f33c13590352da20930f.js>; rel=preload; as=script\\";
set resp.http.Link = \\"</component---node-modules-gatsby-plugin-offline-app-shell-js-78f9e4dea04737fa062d.js>; rel=preload; as=script\\";
set resp.http.Link = \\"</page-data/app-data.json>; rel=preload; as=fetch; crossorigin\\";
set resp.http.Link = \\"</page-data/offline-plugin-app-shell-fallback/page-data.json>; rel=preload; as=fetch; crossorigin\\";
}
if (req.url.path == \\"/hi-folks/\\") {
 set resp.http.Link = \\"</webpack-runtime-acaa8994f1f704475e21.js>; rel=preload; as=script\\";
set resp.http.Link = \\"</styles-565f081c8374bbda155f.js>; rel=preload; as=script\\";
set resp.http.Link = \\"</app-f33c13590352da20930f.js>; rel=preload; as=script\\";
set resp.http.Link = \\"</0-0180cd94ef2497ac7db8.js>; rel=preload; as=script\\";
set resp.http.Link = \\"</component---src-templates-blog-post-js-517987eae96e75cddbe7.js>; rel=preload; as=script\\";
set resp.http.Link = \\"</page-data/app-data.json>; rel=preload; as=fetch; crossorigin\\";
set resp.http.Link = \\"</page-data/hi-folks/page-data.json>; rel=preload; as=fetch; crossorigin\\";
}
if (req.url.path == \\"/my-second-post/\\") {
 set resp.http.Link = \\"</webpack-runtime-acaa8994f1f704475e21.js>; rel=preload; as=script\\";
set resp.http.Link = \\"</styles-565f081c8374bbda155f.js>; rel=preload; as=script\\";
set resp.http.Link = \\"</app-f33c13590352da20930f.js>; rel=preload; as=script\\";
set resp.http.Link = \\"</0-0180cd94ef2497ac7db8.js>; rel=preload; as=script\\";
set resp.http.Link = \\"</component---src-templates-blog-post-js-517987eae96e75cddbe7.js>; rel=preload; as=script\\";
set resp.http.Link = \\"</page-data/app-data.json>; rel=preload; as=fetch; crossorigin\\";
set resp.http.Link = \\"</page-data/my-second-post/page-data.json>; rel=preload; as=fetch; crossorigin\\";
}
if (req.url.path == \\"/hello-world/\\") {
 set resp.http.Link = \\"</webpack-runtime-acaa8994f1f704475e21.js>; rel=preload; as=script\\";
set resp.http.Link = \\"</styles-565f081c8374bbda155f.js>; rel=preload; as=script\\";
set resp.http.Link = \\"</app-f33c13590352da20930f.js>; rel=preload; as=script\\";
set resp.http.Link = \\"</0-0180cd94ef2497ac7db8.js>; rel=preload; as=script\\";
set resp.http.Link = \\"</component---src-templates-blog-post-js-517987eae96e75cddbe7.js>; rel=preload; as=script\\";
set resp.http.Link = \\"</page-data/app-data.json>; rel=preload; as=fetch; crossorigin\\";
set resp.http.Link = \\"</page-data/hello-world/page-data.json>; rel=preload; as=fetch; crossorigin\\";
}
if (req.url.path == \\"/404/\\") {
 set resp.http.Link = \\"</webpack-runtime-acaa8994f1f704475e21.js>; rel=preload; as=script\\";
set resp.http.Link = \\"</styles-565f081c8374bbda155f.js>; rel=preload; as=script\\";
set resp.http.Link = \\"</app-f33c13590352da20930f.js>; rel=preload; as=script\\";
set resp.http.Link = \\"</0-0180cd94ef2497ac7db8.js>; rel=preload; as=script\\";
set resp.http.Link = \\"</component---src-pages-404-js-53e6c51a5a7e73090f50.js>; rel=preload; as=script\\";
set resp.http.Link = \\"</page-data/app-data.json>; rel=preload; as=fetch; crossorigin\\";
set resp.http.Link = \\"</page-data/404/page-data.json>; rel=preload; as=fetch; crossorigin\\";
}
if (req.url.path == \\"/\\") {
 set resp.http.Link = \\"</webpack-runtime-acaa8994f1f704475e21.js>; rel=preload; as=script\\";
set resp.http.Link = \\"</styles-565f081c8374bbda155f.js>; rel=preload; as=script\\";
set resp.http.Link = \\"</app-f33c13590352da20930f.js>; rel=preload; as=script\\";
set resp.http.Link = \\"</0-0180cd94ef2497ac7db8.js>; rel=preload; as=script\\";
set resp.http.Link = \\"</component---src-pages-index-js-0bdd01c77ee09ef0224c.js>; rel=preload; as=script\\";
set resp.http.Link = \\"</page-data/app-data.json>; rel=preload; as=fetch; crossorigin\\";
set resp.http.Link = \\"</page-data/index/page-data.json>; rel=preload; as=fetch; crossorigin\\";
}
if (req.url.path == \\"/404.html\\") {
 set resp.http.Link = \\"</webpack-runtime-acaa8994f1f704475e21.js>; rel=preload; as=script\\";
set resp.http.Link = \\"</styles-565f081c8374bbda155f.js>; rel=preload; as=script\\";
set resp.http.Link = \\"</app-f33c13590352da20930f.js>; rel=preload; as=script\\";
set resp.http.Link = \\"</0-0180cd94ef2497ac7db8.js>; rel=preload; as=script\\";
set resp.http.Link = \\"</component---src-pages-404-js-53e6c51a5a7e73090f50.js>; rel=preload; as=script\\";
set resp.http.Link = \\"</page-data/app-data.json>; rel=preload; as=fetch; crossorigin\\";
set resp.http.Link = \\"</page-data/404.html/page-data.json>; rel=preload; as=fetch; crossorigin\\";
}"
`;

exports[`build-headers-program with caching headers 1`] = `
"
set resp.http.X-Frame-Options = \\"DENY\\";

set resp.http.X-XSS-Protection = \\"1; mode=block\\";

set resp.http.X-Content-Type-Options = \\"nosniff\\";

set resp.http.Referrer-Policy = \\"same-origin\\";

if (req.url.path == \\"/component---node-modules-gatsby-plugin-offline-app-shell-js-78f9e4dea04737fa062d.js\\") {
 set resp.http.Cache-Control = \\"public, max-age=31536000, immutable\\";
}
if (req.url.path == \\"/0-0180cd94ef2497ac7db8.js\\") {
 set resp.http.Cache-Control = \\"public, max-age=31536000, immutable\\";
}
if (req.url.path == \\"/component---src-templates-blog-post-js-517987eae96e75cddbe7.js\\") {
 set resp.http.Cache-Control = \\"public, max-age=31536000, immutable\\";
}
if (req.url.path == \\"/component---src-pages-404-js-53e6c51a5a7e73090f50.js\\") {
 set resp.http.Cache-Control = \\"public, max-age=31536000, immutable\\";
}
if (req.url.path == \\"/component---src-pages-index-js-0bdd01c77ee09ef0224c.js\\") {
 set resp.http.Cache-Control = \\"public, max-age=31536000, immutable\\";
}
if (req.url.path == \\"/webpack-runtime-acaa8994f1f704475e21.js\\") {
 set resp.http.Cache-Control = \\"public, max-age=31536000, immutable\\";
}
if (req.url.path == \\"/styles.1025963f4f2ec7abbad4.css\\") {
 set resp.http.Cache-Control = \\"public, max-age=31536000, immutable\\";
}
if (req.url.path == \\"/styles-565f081c8374bbda155f.js\\") {
 set resp.http.Cache-Control = \\"public, max-age=31536000, immutable\\";
}
if (req.url.path == \\"/app-f33c13590352da20930f.js\\") {
 set resp.http.Cache-Control = \\"public, max-age=31536000, immutable\\";
}
if (req.url.path == \\"/static/*\\") {
 set resp.http.Cache-Control = \\"public, max-age=31536000, immutable\\";
}
if (req.url.path == \\"/sw.js\\") {
 set resp.http.Cache-Control = \\"no-cache\\";
}
if (req.url.path == \\"/offline-plugin-app-shell-fallback/\\") {
 set resp.http.Link = \\"</webpack-runtime-acaa8994f1f704475e21.js>; rel=preload; as=script\\";
set resp.http.Link = \\"</styles-565f081c8374bbda155f.js>; rel=preload; as=script\\";
set resp.http.Link = \\"</app-f33c13590352da20930f.js>; rel=preload; as=script\\";
set resp.http.Link = \\"</component---node-modules-gatsby-plugin-offline-app-shell-js-78f9e4dea04737fa062d.js>; rel=preload; as=script\\";
set resp.http.Link = \\"</page-data/app-data.json>; rel=preload; as=fetch; crossorigin\\";
set resp.http.Link = \\"</page-data/offline-plugin-app-shell-fallback/page-data.json>; rel=preload; as=fetch; crossorigin\\";
}
if (req.url.path == \\"/hi-folks/\\") {
 set resp.http.Link = \\"</webpack-runtime-acaa8994f1f704475e21.js>; rel=preload; as=script\\";
set resp.http.Link = \\"</styles-565f081c8374bbda155f.js>; rel=preload; as=script\\";
set resp.http.Link = \\"</app-f33c13590352da20930f.js>; rel=preload; as=script\\";
set resp.http.Link = \\"</0-0180cd94ef2497ac7db8.js>; rel=preload; as=script\\";
set resp.http.Link = \\"</component---src-templates-blog-post-js-517987eae96e75cddbe7.js>; rel=preload; as=script\\";
set resp.http.Link = \\"</page-data/app-data.json>; rel=preload; as=fetch; crossorigin\\";
set resp.http.Link = \\"</page-data/hi-folks/page-data.json>; rel=preload; as=fetch; crossorigin\\";
}
if (req.url.path == \\"/my-second-post/\\") {
 set resp.http.Link = \\"</webpack-runtime-acaa8994f1f704475e21.js>; rel=preload; as=script\\";
set resp.http.Link = \\"</styles-565f081c8374bbda155f.js>; rel=preload; as=script\\";
set resp.http.Link = \\"</app-f33c13590352da20930f.js>; rel=preload; as=script\\";
set resp.http.Link = \\"</0-0180cd94ef2497ac7db8.js>; rel=preload; as=script\\";
set resp.http.Link = \\"</component---src-templates-blog-post-js-517987eae96e75cddbe7.js>; rel=preload; as=script\\";
set resp.http.Link = \\"</page-data/app-data.json>; rel=preload; as=fetch; crossorigin\\";
set resp.http.Link = \\"</page-data/my-second-post/page-data.json>; rel=preload; as=fetch; crossorigin\\";
}
if (req.url.path == \\"/hello-world/\\") {
 set resp.http.Link = \\"</webpack-runtime-acaa8994f1f704475e21.js>; rel=preload; as=script\\";
set resp.http.Link = \\"</styles-565f081c8374bbda155f.js>; rel=preload; as=script\\";
set resp.http.Link = \\"</app-f33c13590352da20930f.js>; rel=preload; as=script\\";
set resp.http.Link = \\"</0-0180cd94ef2497ac7db8.js>; rel=preload; as=script\\";
set resp.http.Link = \\"</component---src-templates-blog-post-js-517987eae96e75cddbe7.js>; rel=preload; as=script\\";
set resp.http.Link = \\"</page-data/app-data.json>; rel=preload; as=fetch; crossorigin\\";
set resp.http.Link = \\"</page-data/hello-world/page-data.json>; rel=preload; as=fetch; crossorigin\\";
}
if (req.url.path == \\"/404/\\") {
 set resp.http.Link = \\"</webpack-runtime-acaa8994f1f704475e21.js>; rel=preload; as=script\\";
set resp.http.Link = \\"</styles-565f081c8374bbda155f.js>; rel=preload; as=script\\";
set resp.http.Link = \\"</app-f33c13590352da20930f.js>; rel=preload; as=script\\";
set resp.http.Link = \\"</0-0180cd94ef2497ac7db8.js>; rel=preload; as=script\\";
set resp.http.Link = \\"</component---src-pages-404-js-53e6c51a5a7e73090f50.js>; rel=preload; as=script\\";
set resp.http.Link = \\"</page-data/app-data.json>; rel=preload; as=fetch; crossorigin\\";
set resp.http.Link = \\"</page-data/404/page-data.json>; rel=preload; as=fetch; crossorigin\\";
}
if (req.url.path == \\"/\\") {
 set resp.http.Link = \\"</webpack-runtime-acaa8994f1f704475e21.js>; rel=preload; as=script\\";
set resp.http.Link = \\"</styles-565f081c8374bbda155f.js>; rel=preload; as=script\\";
set resp.http.Link = \\"</app-f33c13590352da20930f.js>; rel=preload; as=script\\";
set resp.http.Link = \\"</0-0180cd94ef2497ac7db8.js>; rel=preload; as=script\\";
set resp.http.Link = \\"</component---src-pages-index-js-0bdd01c77ee09ef0224c.js>; rel=preload; as=script\\";
set resp.http.Link = \\"</page-data/app-data.json>; rel=preload; as=fetch; crossorigin\\";
set resp.http.Link = \\"</page-data/index/page-data.json>; rel=preload; as=fetch; crossorigin\\";
}
if (req.url.path == \\"/404.html\\") {
 set resp.http.Link = \\"</webpack-runtime-acaa8994f1f704475e21.js>; rel=preload; as=script\\";
set resp.http.Link = \\"</styles-565f081c8374bbda155f.js>; rel=preload; as=script\\";
set resp.http.Link = \\"</app-f33c13590352da20930f.js>; rel=preload; as=script\\";
set resp.http.Link = \\"</0-0180cd94ef2497ac7db8.js>; rel=preload; as=script\\";
set resp.http.Link = \\"</component---src-pages-404-js-53e6c51a5a7e73090f50.js>; rel=preload; as=script\\";
set resp.http.Link = \\"</page-data/app-data.json>; rel=preload; as=fetch; crossorigin\\";
set resp.http.Link = \\"</page-data/404.html/page-data.json>; rel=preload; as=fetch; crossorigin\\";
}"
`;

exports[`build-headers-program with manifest['pages-manifest'] 1`] = `
"
set resp.http.X-Frame-Options = \\"DENY\\";

set resp.http.X-XSS-Protection = \\"1; mode=block\\";

set resp.http.X-Content-Type-Options = \\"nosniff\\";

set resp.http.Referrer-Policy = \\"same-origin\\";

if (req.url.path == \\"/component---node-modules-gatsby-plugin-offline-app-shell-js-78f9e4dea04737fa062d.js\\") {
 set resp.http.Cache-Control = \\"public, max-age=31536000, immutable\\";
}
if (req.url.path == \\"/0-0180cd94ef2497ac7db8.js\\") {
 set resp.http.Cache-Control = \\"public, max-age=31536000, immutable\\";
}
if (req.url.path == \\"/component---src-templates-blog-post-js-517987eae96e75cddbe7.js\\") {
 set resp.http.Cache-Control = \\"public, max-age=31536000, immutable\\";
}
if (req.url.path == \\"/component---src-pages-404-js-53e6c51a5a7e73090f50.js\\") {
 set resp.http.Cache-Control = \\"public, max-age=31536000, immutable\\";
}
if (req.url.path == \\"/component---src-pages-index-js-0bdd01c77ee09ef0224c.js\\") {
 set resp.http.Cache-Control = \\"public, max-age=31536000, immutable\\";
}
if (req.url.path == \\"/pages-manifest-ab11f09e0ca7ecd3b43e.js\\") {
 set resp.http.Cache-Control = \\"public, max-age=31536000, immutable\\";
}
if (req.url.path == \\"/webpack-runtime-acaa8994f1f704475e21.js\\") {
 set resp.http.Cache-Control = \\"public, max-age=31536000, immutable\\";
}
if (req.url.path == \\"/styles.1025963f4f2ec7abbad4.css\\") {
 set resp.http.Cache-Control = \\"public, max-age=31536000, immutable\\";
}
if (req.url.path == \\"/styles-565f081c8374bbda155f.js\\") {
 set resp.http.Cache-Control = \\"public, max-age=31536000, immutable\\";
}
if (req.url.path == \\"/app-f33c13590352da20930f.js\\") {
 set resp.http.Cache-Control = \\"public, max-age=31536000, immutable\\";
}
if (req.url.path == \\"/static/*\\") {
 set resp.http.Cache-Control = \\"public, max-age=31536000, immutable\\";
}
if (req.url.path == \\"/sw.js\\") {
 set resp.http.Cache-Control = \\"no-cache\\";
}
if (req.url.path == \\"/offline-plugin-app-shell-fallback/\\") {
 set resp.http.Link = \\"</webpack-runtime-acaa8994f1f704475e21.js>; rel=preload; as=script\\";
set resp.http.Link = \\"</styles-565f081c8374bbda155f.js>; rel=preload; as=script\\";
set resp.http.Link = \\"</app-f33c13590352da20930f.js>; rel=preload; as=script\\";
set resp.http.Link = \\"</component---node-modules-gatsby-plugin-offline-app-shell-js-78f9e4dea04737fa062d.js>; rel=preload; as=script\\";
}
if (req.url.path == \\"/hi-folks/\\") {
 set resp.http.Link = \\"</webpack-runtime-acaa8994f1f704475e21.js>; rel=preload; as=script\\";
set resp.http.Link = \\"</styles-565f081c8374bbda155f.js>; rel=preload; as=script\\";
set resp.http.Link = \\"</app-f33c13590352da20930f.js>; rel=preload; as=script\\";
set resp.http.Link = \\"</0-0180cd94ef2497ac7db8.js>; rel=preload; as=script\\";
set resp.http.Link = \\"</component---src-templates-blog-post-js-517987eae96e75cddbe7.js>; rel=preload; as=script\\";
}
if (req.url.path == \\"/my-second-post/\\") {
 set resp.http.Link = \\"</webpack-runtime-acaa8994f1f704475e21.js>; rel=preload; as=script\\";
set resp.http.Link = \\"</styles-565f081c8374bbda155f.js>; rel=preload; as=script\\";
set resp.http.Link = \\"</app-f33c13590352da20930f.js>; rel=preload; as=script\\";
set resp.http.Link = \\"</0-0180cd94ef2497ac7db8.js>; rel=preload; as=script\\";
set resp.http.Link = \\"</component---src-templates-blog-post-js-517987eae96e75cddbe7.js>; rel=preload; as=script\\";
}
if (req.url.path == \\"/hello-world/\\") {
 set resp.http.Link = \\"</webpack-runtime-acaa8994f1f704475e21.js>; rel=preload; as=script\\";
set resp.http.Link = \\"</styles-565f081c8374bbda155f.js>; rel=preload; as=script\\";
set resp.http.Link = \\"</app-f33c13590352da20930f.js>; rel=preload; as=script\\";
set resp.http.Link = \\"</0-0180cd94ef2497ac7db8.js>; rel=preload; as=script\\";
set resp.http.Link = \\"</component---src-templates-blog-post-js-517987eae96e75cddbe7.js>; rel=preload; as=script\\";
}
if (req.url.path == \\"/404/\\") {
 set resp.http.Link = \\"</webpack-runtime-acaa8994f1f704475e21.js>; rel=preload; as=script\\";
set resp.http.Link = \\"</styles-565f081c8374bbda155f.js>; rel=preload; as=script\\";
set resp.http.Link = \\"</app-f33c13590352da20930f.js>; rel=preload; as=script\\";
set resp.http.Link = \\"</0-0180cd94ef2497ac7db8.js>; rel=preload; as=script\\";
set resp.http.Link = \\"</component---src-pages-404-js-53e6c51a5a7e73090f50.js>; rel=preload; as=script\\";
}
if (req.url.path == \\"/\\") {
 set resp.http.Link = \\"</webpack-runtime-acaa8994f1f704475e21.js>; rel=preload; as=script\\";
set resp.http.Link = \\"</styles-565f081c8374bbda155f.js>; rel=preload; as=script\\";
set resp.http.Link = \\"</app-f33c13590352da20930f.js>; rel=preload; as=script\\";
set resp.http.Link = \\"</0-0180cd94ef2497ac7db8.js>; rel=preload; as=script\\";
set resp.http.Link = \\"</component---src-pages-index-js-0bdd01c77ee09ef0224c.js>; rel=preload; as=script\\";
}
if (req.url.path == \\"/404.html\\") {
 set resp.http.Link = \\"</webpack-runtime-acaa8994f1f704475e21.js>; rel=preload; as=script\\";
set resp.http.Link = \\"</styles-565f081c8374bbda155f.js>; rel=preload; as=script\\";
set resp.http.Link = \\"</app-f33c13590352da20930f.js>; rel=preload; as=script\\";
set resp.http.Link = \\"</0-0180cd94ef2497ac7db8.js>; rel=preload; as=script\\";
set resp.http.Link = \\"</component---src-pages-404-js-53e6c51a5a7e73090f50.js>; rel=preload; as=script\\";
}"
`;

exports[`build-headers-program with security headers 1`] = `
"
set resp.http.X-Frame-Options = \\"ALLOW-FROM https\\";

set resp.http.X-XSS-Protection = \\"1; mode=block\\";

set resp.http.X-Content-Type-Options = \\"nosniff\\";

set resp.http.Referrer-Policy = \\"same-origin\\";

set resp.http.Content-Security-Policy = \\"frame-ancestors 'self' https\\";

if (req.url.path == \\"/hello\\") {
 set resp.http.X-Frame-Options = \\"SAMEORIGIN\\";
}
if (req.url.path == \\"/component---node-modules-gatsby-plugin-offline-app-shell-js-78f9e4dea04737fa062d.js\\") {
 set resp.http.Cache-Control = \\"public, max-age=31536000, immutable\\";
}
if (req.url.path == \\"/0-0180cd94ef2497ac7db8.js\\") {
 set resp.http.Cache-Control = \\"public, max-age=31536000, immutable\\";
}
if (req.url.path == \\"/component---src-templates-blog-post-js-517987eae96e75cddbe7.js\\") {
 set resp.http.Cache-Control = \\"public, max-age=31536000, immutable\\";
}
if (req.url.path == \\"/component---src-pages-404-js-53e6c51a5a7e73090f50.js\\") {
 set resp.http.Cache-Control = \\"public, max-age=31536000, immutable\\";
}
if (req.url.path == \\"/component---src-pages-index-js-0bdd01c77ee09ef0224c.js\\") {
 set resp.http.Cache-Control = \\"public, max-age=31536000, immutable\\";
}
if (req.url.path == \\"/webpack-runtime-acaa8994f1f704475e21.js\\") {
 set resp.http.Cache-Control = \\"public, max-age=31536000, immutable\\";
}
if (req.url.path == \\"/styles.1025963f4f2ec7abbad4.css\\") {
 set resp.http.Cache-Control = \\"public, max-age=31536000, immutable\\";
}
if (req.url.path == \\"/styles-565f081c8374bbda155f.js\\") {
 set resp.http.Cache-Control = \\"public, max-age=31536000, immutable\\";
}
if (req.url.path == \\"/app-f33c13590352da20930f.js\\") {
 set resp.http.Cache-Control = \\"public, max-age=31536000, immutable\\";
}
if (req.url.path == \\"/static/*\\") {
 set resp.http.Cache-Control = \\"public, max-age=31536000, immutable\\";
}
if (req.url.path == \\"/sw.js\\") {
 set resp.http.Cache-Control = \\"no-cache\\";
}
if (req.url.path == \\"/offline-plugin-app-shell-fallback/\\") {
 set resp.http.Link = \\"</webpack-runtime-acaa8994f1f704475e21.js>; rel=preload; as=script\\";
set resp.http.Link = \\"</styles-565f081c8374bbda155f.js>; rel=preload; as=script\\";
set resp.http.Link = \\"</app-f33c13590352da20930f.js>; rel=preload; as=script\\";
set resp.http.Link = \\"</component---node-modules-gatsby-plugin-offline-app-shell-js-78f9e4dea04737fa062d.js>; rel=preload; as=script\\";
set resp.http.Link = \\"</page-data/app-data.json>; rel=preload; as=fetch; crossorigin\\";
set resp.http.Link = \\"</page-data/offline-plugin-app-shell-fallback/page-data.json>; rel=preload; as=fetch; crossorigin\\";
}
if (req.url.path == \\"/hi-folks/\\") {
 set resp.http.Link = \\"</webpack-runtime-acaa8994f1f704475e21.js>; rel=preload; as=script\\";
set resp.http.Link = \\"</styles-565f081c8374bbda155f.js>; rel=preload; as=script\\";
set resp.http.Link = \\"</app-f33c13590352da20930f.js>; rel=preload; as=script\\";
set resp.http.Link = \\"</0-0180cd94ef2497ac7db8.js>; rel=preload; as=script\\";
set resp.http.Link = \\"</component---src-templates-blog-post-js-517987eae96e75cddbe7.js>; rel=preload; as=script\\";
set resp.http.Link = \\"</page-data/app-data.json>; rel=preload; as=fetch; crossorigin\\";
set resp.http.Link = \\"</page-data/hi-folks/page-data.json>; rel=preload; as=fetch; crossorigin\\";
}
if (req.url.path == \\"/my-second-post/\\") {
 set resp.http.Link = \\"</webpack-runtime-acaa8994f1f704475e21.js>; rel=preload; as=script\\";
set resp.http.Link = \\"</styles-565f081c8374bbda155f.js>; rel=preload; as=script\\";
set resp.http.Link = \\"</app-f33c13590352da20930f.js>; rel=preload; as=script\\";
set resp.http.Link = \\"</0-0180cd94ef2497ac7db8.js>; rel=preload; as=script\\";
set resp.http.Link = \\"</component---src-templates-blog-post-js-517987eae96e75cddbe7.js>; rel=preload; as=script\\";
set resp.http.Link = \\"</page-data/app-data.json>; rel=preload; as=fetch; crossorigin\\";
set resp.http.Link = \\"</page-data/my-second-post/page-data.json>; rel=preload; as=fetch; crossorigin\\";
}
if (req.url.path == \\"/hello-world/\\") {
 set resp.http.Link = \\"</webpack-runtime-acaa8994f1f704475e21.js>; rel=preload; as=script\\";
set resp.http.Link = \\"</styles-565f081c8374bbda155f.js>; rel=preload; as=script\\";
set resp.http.Link = \\"</app-f33c13590352da20930f.js>; rel=preload; as=script\\";
set resp.http.Link = \\"</0-0180cd94ef2497ac7db8.js>; rel=preload; as=script\\";
set resp.http.Link = \\"</component---src-templates-blog-post-js-517987eae96e75cddbe7.js>; rel=preload; as=script\\";
set resp.http.Link = \\"</page-data/app-data.json>; rel=preload; as=fetch; crossorigin\\";
set resp.http.Link = \\"</page-data/hello-world/page-data.json>; rel=preload; as=fetch; crossorigin\\";
}
if (req.url.path == \\"/404/\\") {
 set resp.http.Link = \\"</webpack-runtime-acaa8994f1f704475e21.js>; rel=preload; as=script\\";
set resp.http.Link = \\"</styles-565f081c8374bbda155f.js>; rel=preload; as=script\\";
set resp.http.Link = \\"</app-f33c13590352da20930f.js>; rel=preload; as=script\\";
set resp.http.Link = \\"</0-0180cd94ef2497ac7db8.js>; rel=preload; as=script\\";
set resp.http.Link = \\"</component---src-pages-404-js-53e6c51a5a7e73090f50.js>; rel=preload; as=script\\";
set resp.http.Link = \\"</page-data/app-data.json>; rel=preload; as=fetch; crossorigin\\";
set resp.http.Link = \\"</page-data/404/page-data.json>; rel=preload; as=fetch; crossorigin\\";
}
if (req.url.path == \\"/\\") {
 set resp.http.Link = \\"</webpack-runtime-acaa8994f1f704475e21.js>; rel=preload; as=script\\";
set resp.http.Link = \\"</styles-565f081c8374bbda155f.js>; rel=preload; as=script\\";
set resp.http.Link = \\"</app-f33c13590352da20930f.js>; rel=preload; as=script\\";
set resp.http.Link = \\"</0-0180cd94ef2497ac7db8.js>; rel=preload; as=script\\";
set resp.http.Link = \\"</component---src-pages-index-js-0bdd01c77ee09ef0224c.js>; rel=preload; as=script\\";
set resp.http.Link = \\"</page-data/app-data.json>; rel=preload; as=fetch; crossorigin\\";
set resp.http.Link = \\"</page-data/index/page-data.json>; rel=preload; as=fetch; crossorigin\\";
}
if (req.url.path == \\"/404.html\\") {
 set resp.http.Link = \\"</webpack-runtime-acaa8994f1f704475e21.js>; rel=preload; as=script\\";
set resp.http.Link = \\"</styles-565f081c8374bbda155f.js>; rel=preload; as=script\\";
set resp.http.Link = \\"</app-f33c13590352da20930f.js>; rel=preload; as=script\\";
set resp.http.Link = \\"</0-0180cd94ef2497ac7db8.js>; rel=preload; as=script\\";
set resp.http.Link = \\"</component---src-pages-404-js-53e6c51a5a7e73090f50.js>; rel=preload; as=script\\";
set resp.http.Link = \\"</page-data/app-data.json>; rel=preload; as=fetch; crossorigin\\";
set resp.http.Link = \\"</page-data/404.html/page-data.json>; rel=preload; as=fetch; crossorigin\\";
}"
`;

exports[`build-headers-program without caching headers 1`] = `
"
set resp.http.X-Frame-Options = \\"DENY\\";

set resp.http.X-XSS-Protection = \\"1; mode=block\\";

set resp.http.X-Content-Type-Options = \\"nosniff\\";

set resp.http.Referrer-Policy = \\"same-origin\\";

if (req.url.path == \\"/offline-plugin-app-shell-fallback/\\") {
 set resp.http.Link = \\"</webpack-runtime-acaa8994f1f704475e21.js>; rel=preload; as=script\\";
set resp.http.Link = \\"</styles-565f081c8374bbda155f.js>; rel=preload; as=script\\";
set resp.http.Link = \\"</app-f33c13590352da20930f.js>; rel=preload; as=script\\";
set resp.http.Link = \\"</component---node-modules-gatsby-plugin-offline-app-shell-js-78f9e4dea04737fa062d.js>; rel=preload; as=script\\";
set resp.http.Link = \\"</page-data/app-data.json>; rel=preload; as=fetch; crossorigin\\";
set resp.http.Link = \\"</page-data/offline-plugin-app-shell-fallback/page-data.json>; rel=preload; as=fetch; crossorigin\\";
}
if (req.url.path == \\"/hi-folks/\\") {
 set resp.http.Link = \\"</webpack-runtime-acaa8994f1f704475e21.js>; rel=preload; as=script\\";
set resp.http.Link = \\"</styles-565f081c8374bbda155f.js>; rel=preload; as=script\\";
set resp.http.Link = \\"</app-f33c13590352da20930f.js>; rel=preload; as=script\\";
set resp.http.Link = \\"</0-0180cd94ef2497ac7db8.js>; rel=preload; as=script\\";
set resp.http.Link = \\"</component---src-templates-blog-post-js-517987eae96e75cddbe7.js>; rel=preload; as=script\\";
set resp.http.Link = \\"</page-data/app-data.json>; rel=preload; as=fetch; crossorigin\\";
set resp.http.Link = \\"</page-data/hi-folks/page-data.json>; rel=preload; as=fetch; crossorigin\\";
}
if (req.url.path == \\"/my-second-post/\\") {
 set resp.http.Link = \\"</webpack-runtime-acaa8994f1f704475e21.js>; rel=preload; as=script\\";
set resp.http.Link = \\"</styles-565f081c8374bbda155f.js>; rel=preload; as=script\\";
set resp.http.Link = \\"</app-f33c13590352da20930f.js>; rel=preload; as=script\\";
set resp.http.Link = \\"</0-0180cd94ef2497ac7db8.js>; rel=preload; as=script\\";
set resp.http.Link = \\"</component---src-templates-blog-post-js-517987eae96e75cddbe7.js>; rel=preload; as=script\\";
set resp.http.Link = \\"</page-data/app-data.json>; rel=preload; as=fetch; crossorigin\\";
set resp.http.Link = \\"</page-data/my-second-post/page-data.json>; rel=preload; as=fetch; crossorigin\\";
}
if (req.url.path == \\"/hello-world/\\") {
 set resp.http.Link = \\"</webpack-runtime-acaa8994f1f704475e21.js>; rel=preload; as=script\\";
set resp.http.Link = \\"</styles-565f081c8374bbda155f.js>; rel=preload; as=script\\";
set resp.http.Link = \\"</app-f33c13590352da20930f.js>; rel=preload; as=script\\";
set resp.http.Link = \\"</0-0180cd94ef2497ac7db8.js>; rel=preload; as=script\\";
set resp.http.Link = \\"</component---src-templates-blog-post-js-517987eae96e75cddbe7.js>; rel=preload; as=script\\";
set resp.http.Link = \\"</page-data/app-data.json>; rel=preload; as=fetch; crossorigin\\";
set resp.http.Link = \\"</page-data/hello-world/page-data.json>; rel=preload; as=fetch; crossorigin\\";
}
if (req.url.path == \\"/404/\\") {
 set resp.http.Link = \\"</webpack-runtime-acaa8994f1f704475e21.js>; rel=preload; as=script\\";
set resp.http.Link = \\"</styles-565f081c8374bbda155f.js>; rel=preload; as=script\\";
set resp.http.Link = \\"</app-f33c13590352da20930f.js>; rel=preload; as=script\\";
set resp.http.Link = \\"</0-0180cd94ef2497ac7db8.js>; rel=preload; as=script\\";
set resp.http.Link = \\"</component---src-pages-404-js-53e6c51a5a7e73090f50.js>; rel=preload; as=script\\";
set resp.http.Link = \\"</page-data/app-data.json>; rel=preload; as=fetch; crossorigin\\";
set resp.http.Link = \\"</page-data/404/page-data.json>; rel=preload; as=fetch; crossorigin\\";
}
if (req.url.path == \\"/\\") {
 set resp.http.Link = \\"</webpack-runtime-acaa8994f1f704475e21.js>; rel=preload; as=script\\";
set resp.http.Link = \\"</styles-565f081c8374bbda155f.js>; rel=preload; as=script\\";
set resp.http.Link = \\"</app-f33c13590352da20930f.js>; rel=preload; as=script\\";
set resp.http.Link = \\"</0-0180cd94ef2497ac7db8.js>; rel=preload; as=script\\";
set resp.http.Link = \\"</component---src-pages-index-js-0bdd01c77ee09ef0224c.js>; rel=preload; as=script\\";
set resp.http.Link = \\"</page-data/app-data.json>; rel=preload; as=fetch; crossorigin\\";
set resp.http.Link = \\"</page-data/index/page-data.json>; rel=preload; as=fetch; crossorigin\\";
}
if (req.url.path == \\"/404.html\\") {
 set resp.http.Link = \\"</webpack-runtime-acaa8994f1f704475e21.js>; rel=preload; as=script\\";
set resp.http.Link = \\"</styles-565f081c8374bbda155f.js>; rel=preload; as=script\\";
set resp.http.Link = \\"</app-f33c13590352da20930f.js>; rel=preload; as=script\\";
set resp.http.Link = \\"</0-0180cd94ef2497ac7db8.js>; rel=preload; as=script\\";
set resp.http.Link = \\"</component---src-pages-404-js-53e6c51a5a7e73090f50.js>; rel=preload; as=script\\";
set resp.http.Link = \\"</page-data/app-data.json>; rel=preload; as=fetch; crossorigin\\";
set resp.http.Link = \\"</page-data/404.html/page-data.json>; rel=preload; as=fetch; crossorigin\\";
}"
`;
